# loa-logs

./: .eslintignore  .eslintrc.cjs  .gitignore  .oxfmtrc.json  .prettierignore  .prettierrc  Dockerfile.linux  Makefile  README.md  eslint.config.js  latest.json  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
docs/: linux.md
meter-core-rs-stub/: Cargo.toml
meter-core-rs-stub/src/: lib.rs
scripts/linux/: install.sh  nineveh-helper.sh  start-loa.sh  uninstall.sh
src/: app.css  app.d.ts  app.html
src-tauri/: .gitignore  Cargo.toml  app.manifest  build.rs  settings.rs  settings.template.json  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json  windows-app.manifest
src-tauri/capabilities/: default.json  desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/meter-data/: Ability.json  AddonSkillFeature.json  ArkPassive.json  ArkPassiveKarma.json  CardBook.json  CombatEffect.json  Enums.json  Esther.json  GemSkillGroup.json  ItemAmplificationBase.json  ItemClassOption.json  ItemGradeStaticOption.json  ItemLevelOption.json  ItemSet.json  Npc.json  PCData.json  Skill.json  StatType.json  Zone.json  encounters.json
src-tauri/migrations/: 01_init.sql  1_init.sql
src-tauri/nsis/: hooks.nsh  installer.nsi
src-tauri/src/: background.rs  constants.rs  context.rs  data.rs  database.rs  emitter.rs  extensions.rs  handlers.rs  local.rs  local_api.rs  logger.rs  macros.rs  main.rs  misc.rs  notifier.rs  region.rs  resources.rs  settings.rs  setup.rs  shell.rs  system_tray.rs  ui_events.rs  utils.rs  windivert.rs  window_event.rs
src-tauri/src/abstractions/: fake_meter.rs  heartbeat.rs  mod.rs  region.rs  snow_meter.rs  traits.rs
src-tauri/src/api/: args.rs  ban_list.rs  heartbeat_api.rs  mod.rs  ntp_clock.rs  stats_api.rs
src-tauri/src/app/: compat.rs  logger.rs  mod.rs  panic.rs  path.rs
src-tauri/src/app/autostart/: linux.rs  mod.rs  windows.rs
src-tauri/src/autostart/: windows.rs
src-tauri/src/commands/: encounter.rs  misc.rs  mod.rs  window.rs
src-tauri/src/database/: migrator.rs  mod.rs  models.rs  queries.rs  repository.rs  sql_types.rs  utils.rs
src-tauri/src/database/repositories/: encounter.rs  mod.rs  stats.rs  tests.rs
src-tauri/src/handlers/: error.rs  handlers.rs  mod.rs  stats.rs
src-tauri/src/live/: addon_type.rs  broadcast.rs  capture.rs  data.rs  emitter.rs  encounter_service.rs  encounter_state.rs  entity_tracker.rs  heartbeat.rs  id_tracker.rs  inspect_stats.rs  local.rs  manager.rs  mod.rs  models.rs  ntp_clock.rs  packet.rs  party_tracker.rs  player_stats.rs  processor.rs  rdps.rs  region.rs  skill_tracker.rs  sntp.rs  stat_type.rs  stats_api.rs  status_tracker.rs  utils.rs
src-tauri/src/local_api/: mod.rs
src-tauri/src/models/: data.rs  dps.rs  encounter.rs  entity.rs  misc.rs  mod.rs  player.rs  skill.rs  stats.rs  status_effect.rs  ui.rs  utils.rs
src-tauri/src/nineveh/: ipc.rs  mod.rs
src-tauri/src/parser/: data.rs  encounter_state.rs  entity_tracker.rs  id_tracker.rs  log_lines.rs  maros.rs  mod.rs  models.rs  parser.rs  party_tracker.rs  rdps.rs  skill_tracker.rs  stats_api.rs  status_tracker.rs  utils.rs
src-tauri/src/services/: mod.rs  ui_sender.rs
src-tauri/src/settings/: manager.rs  mod.rs  model.rs
src-tauri/src/ui/: events.rs  extensions.rs  mod.rs  tray.rs
src-tauri/wix/: main.wxs
src/lib/: api.ts  buffs.svelte.ts  charts.ts  column.ts  context.svelte.ts  encounter.svelte.ts  entity.svelte.ts  icons.ts  rdps-breakdown.ts  settings.ts  skill.svelte.ts  stats.ts  stores.svelte.ts  types.ts  utils.ts
src/lib/components/: ArcanistCardTable.svelte  BetaWelcome.svelte  BossBreakdown.svelte  BossBreakdownRow.svelte  BossInfo.svelte  BossOnlyDamage.svelte  BossRow.svelte  BossTable.svelte  BuffHeader.svelte  BuffRow.svelte  BuffSkillBreakdown.svelte  BuffSkillBreakdownRow.svelte  Buffs.svelte  Card.svelte  DamageMeter.svelte  DamageMeterColumns.svelte  DamageMeterHeader.svelte  DamageMeterPartySplit.svelte  DamageMeterPlayer.svelte  DamageMeterPlayerRow.svelte  DamageMeterRow.svelte  DamageTaken.svelte  DamageTakenRow.svelte  DatePicker.svelte  DateRangePicker.svelte  Details.svelte  EncounterInfo.svelte  Footer.svelte  GameMessage.svelte  LiveShareButton.svelte  Markdown.svelte  NinevehWelcome.svelte  PartyBuffRow.svelte  PlayerBreakdown.svelte  PlayerBreakdownColumns.svelte  PlayerBreakdownHeader.svelte  PlayerBreakdownRow.svelte  PlayerRow.svelte  QuickTooltip.svelte  ShieldHeader.svelte  (+8 more)
src/lib/components/live/: LiveBossInfo.svelte  LiveDamageMeter.svelte  LiveEncounterInfo.svelte  LiveFooter.svelte
src/lib/components/logs/: LogBuffBreakdown.svelte  LogBuffBreakdownRow.svelte  LogBuffHeader.svelte  LogBuffRow.svelte  LogBuffs.svelte  LogDamageMeter.svelte  LogDamageMeterHeader.svelte  LogDamageMeterPartySplit.svelte  LogDamageMeterRow.svelte  LogEncounterInfo.svelte  LogPartyBuffHeader.svelte  LogPartyBuffRow.svelte  LogQuickControls.svelte  (+12 more)
src/lib/constants/: ArkGrid.ts  ArkPassives.json  BattleItem.ts  EFTable_ArkPassive.ts  EFTable_Item.d.ts  EFTable_PC.ts  EFTable_SeasonCardBook.ts  EFTable_Skill.ts  EFTable_SkillBuff.ts  Engrave.ts  StatOrigin.json  StatOrigin.ts  bossHpBars.ts  bosses.ts  bossmap.ts  cards.ts  classes.ts  colors.ts  encounters.ts  esthers.ts  formatted.ts  rdps-stats.ts  stat-type.ts
src/lib/data/: changelog.md
src/lib/utils/: arkGrid.ts  buffs.ts  charts.ts  colors.ts  dpsCharts.ts  live.svelte.ts  live.ts  numbers.ts  settings.ts  setup.ts  shortcuts.ts  stores.ts  strings.ts  supportBuffCharts.ts  svelte.ts  sync.ts  toasts.ts  tooltip.ts  windowedStats.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  ThemeProvider.svelte  loader.svelte
src/routes/(app)/: +layout.svelte  Header.svelte
src/routes/about/: +page.svelte
src/routes/changelog/: +page.svelte
src/routes/logs/: +page.svelte  +page.ts
src/routes/player/: +layout.svelte
src/routes/settings/: +page.svelte
src/routes/upload/: +page.svelte
workflows/: ci.yml  release.yml
(+115 files in other folders)
