[package]
name = "app"
version = "0.1.0"
description = "Lost Ark DPS Meter written in Rust"
authors = ["Snow"]
license = "GNU General Public License v3.0"
repository = "https://github.com/snoww/loa-logs"
default-run = "app"
edition = "2024"
rust-version = "1.89.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.8.4", features = ["image-png", "tray-icon"] }
bitflags = "2.4.1"
window-vibrancy = "0.6"
hashbrown = { version = "0.15.0", features = ["serde"] }
r2d2_sqlite = "0.31.0"
r2d2 = "0.8.10"
rusqlite = { version = "0.37.0", features = ["bundled", "serde_json"] }
tokio = { version = "1.45.1", features = ["rt", "macros"] }
serde_with = "3.12.0"
log = "0.4.18"
flexi_logger = { version = "0.30.2", default-features = false }
reqwest = { version = "0.12", features = ["json", "gzip"] }
uuid = { version = "1.17.0", features = ["v4"] }
moka = { version = "0.12.7", features = ["sync"] }
rfd = { version = "0.15", features = ["common-controls-v6"] }
rsntp = { version = "4.0.0", default-features = false, features = ["chrono"] }
flate2 = "1.0.30"
sysinfo = "0.35.1"
thiserror = "2.0.16"
strum = "0.27"
strum_macros = "0.27"
async-trait = "0.1.89"
semver = "1.0.27"
meter-core = { git = "https://github.com/snoww/meter-core-rs", optional = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2.3.1"
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-updater = "2.9.0"
tauri-plugin-opener = "2.4.0"
tauri-plugin-log = "2.7.0"
tauri-plugin-window-state = "2.4.0"
tauri-plugin-process = "2.3.0"
tauri-plugin-global-shortcut = "2.3.0"
tauri-plugin-single-instance = "2.3.4"

[target.'cfg(target_os = "windows")'.dependencies]
nt_version = "0.1.3"

[target.'cfg(target_os = "linux")'.dependencies]
auto-launch = "0.5.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol", "meter-core"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
# If this feature is set, it will require meter-core and allow for live logs. Otherwise, only
# older logs will be shown.
meter-core = ["dep:meter-core"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols

[profile.dev.package."*"]
debug = false # Disable debug symbols for dependencies

[profile.dev]
incremental = true
opt-level = 0
